<resources>
    <string name="title_activity_tela_inicial_fs">TelaInicialFS</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bt_cardapio">CARDÁPIO</string>
    <string name="bt_login">LOGIN</string>
    <string name="bt_cadastrar">CADASTRAR</string>
    <string name="bt_confirmar">CONFIRMAR</string>
    <string name="bt_cadastrar_endereco">CADASTRAR</string>
    <string name="rb_acai">Açaí</string>
    <string name="rb_cupuacu">Cupuaçu</string>
    <string name="rb_casadinha">Casadinha</string>
    <string name="editText_telefone">DDD+Número</string>
    <string name="editText_nome">Nome</string>
    <string name="editText_apelido">Como quer ser chamado</string>
    <string name="editText_senhaAtual">Senha atual</string>
    <string name="editText_novaSenha">Nova senha</string>
    <string name="editText_confirmarSenha">Confirmar senha</string>
    <string name="txt_status_close">Fechado para pedidos</string>
    <string name="txt_status_open">Aberto para pedidos</string>
    <string name="txt_logo">Logo_Pediuu</string>
    <string name="textView_telefone">Telefone</string>
    <string name="textView_senha">Senha</string>
    <string name="textView_cadastro">Cadastro</string>
    <string name="textView_avisoSenha">Mínimo 6 caracteres</string>
    <string name="tv_sabor">Sabor</string>
    <string name="tv_complemento">Complemento</string>
    <string name="tv_fruta">Fruta</string>
    <string name="tv_calda">Calda</string>
    <string name="tv_adicionais">Adicionais</string>
    <string name="tv_maxCompl">MÁX:</string>
    <string name="tv_numMaxCompl">0</string>
    <string name="tv_maxCalda">MÁX:</string>
    <string name="tv_numMaxCalda">0</string>
    <string name="tv_maxAdicionais">MÁX:</string>
    <string name="tv_numMaxAdicionais">0</string>
    <string name="tv_cAveia">Aveia</string>
    <string name="tv_cFarinhaLactea">Farinha Láctea</string>
    <string name="tv_cFarinhaDeCast">Farinha de Castanha</string>
    <string name="tv_cAmendoimInt">Amendoim</string>
    <string name="tv_cFarinhaDeAmen">Farinha de Amendoim</string>
    <string name="tv_cAmendoimGranu">Amendoim Granulado</string>
    <string name="tv_cLeitePo">Leite em Pó</string>
    <string name="tv_cNeston">Neston</string>
    <string name="tv_cSucrilho">Sucrilho</string>
    <string name="tv_cCerealChoc">Cereal de Chocolate</string>
    <string name="tv_cPacoca">Paçoca</string>
    <string name="tv_cPacocaFarelo">Paçoca Farelinho</string>
    <string name="tv_cGranola">Granola Tradicional</string>
    <string name="tv_cGranolaChoc">Granola de Chocolate</string>
    <string name="tv_fAbacaxi">Abacaxi</string>
    <string name="tv_fBanana">Banana</string>
    <string name="tv_fMaca">Maçã</string>
    <string name="tv_fKiwi">Kiwi</string>
    <string name="tv_fMorango">Morango</string>
    <string name="tv_fUva">Uva</string>
    <string name="tv_fManga">Manga</string>
    <string name="tv_caldaMorango">Morango</string>
    <string name="tv_caldaChocolate">Chocolate</string>
    <string name="tv_caldaLeiteConc">Leite Condensado</string>
    <string name="tv_caldaDoceLeite">Doce de Leite</string>
    <string name="tv_caldaMel">Mel</string>
    <string name="tv_caldaLimao">Limão</string>
    <string name="tv_caldaMaracuja">Maracujá</string>
    <string name="tv_caldaFrutVerm">Frutas Vermelhas</string>
    <string name="tv_caldaMenta">Menta</string>
    <string name="tv_caldaUva">Uva</string>
    <string name="tv_caldaCaramelo">Caramelo</string>
    <string name="tv_adOreo">Oreo</string>
    <string name="tv_adKitKat">Kit Kat</string>
    <string name="tv_adBis">Bis</string>
    <string name="tv_adMM">MMs</string>
    <string name="tv_adJujuba">Jujuba</string>
    <string name="tv_adOuroBranco">Ouro Branco</string>
    <string name="tv_adCremeAvela">Creme de Avelã</string>
    <string name="tv_adTortuguita">Tortuguita</string>
    <string name="tv_adBatom">Batom</string>
    <string name="tv_adChocobal">Chocobal</string>
    <string name="tv_adOvomaltine">Ovomaltine</string>
    <string name="tv_adMarshmallow">Marshmallow</string>
    <string name="tv_adTubChocolate">Tubinhos de Chocolate</string>
    <string name="tv_adGotChocolate">Gotas de Chocolate</string>
    <string name="tv_adRaspChocolate">Chocolate em Raspas</string>
    <string name="tv_adCremPitaya">Creme de Pitaya</string>
    <string name="tv_adCremMorango">Creme de Morango</string>
    <string name="tv_valorCompl">R$0,00</string>
    <string name="tv_valorFruta">R$0,00</string>
    <string name="tv_valorCalda">R$0,00</string>
    <string name="tv_valorAdd">R$0,00</string>
    <string name="tv_qtd">0</string>
    <string name="iv_plus">Plus</string>
    <string name="iv_minus">Minus</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">ENTRAR</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cadastro_endereco">"Cadastro de Endereço"</string>
    <string name="identificacao_endereco">"Identificação de Endereço"</string>
    <string name="logradouro_endereco">"Logradouro"</string>
    <string name="numero_endereco">"Número"</string>
    <string name="bairro_endereco">"Bairro"</string>
    <string name="pontoRef_endereco">"Ponto de Referência"</string>
    <string name="app_name">PediuuChegouu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_historico">Histórico</string>
    <string name="nav_sair">Sair</string>
    <string name="item_configuracoes">Configurações</string>
    <string name="nav_alterar_dados">Alterar dados</string>
    <string name="nav_alterar_senha">Alterar senha</string>
    <string name="tv_produto_historico">Cachorro quente</string>
    <string name="tv_tamanho_historico">Tamanho</string>
    <string name="tv_data_historico">00/00/0000</string>
    <string name="tv_descricao_historico">Descrição do produto e adicionais</string>
    <string name="tv_valor_historico">Valor</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="tv_tamanho_acai">Tamanho</string>
    <string name="tv_recipiente_acai">Recipiente</string>
    <string name="tv_tamanho_item_acai">Tamanho</string>
    <string name="tv_divisor_acai">-</string>
    <string name="tv_quantidade_acai">Quantidade</string>
    <string name="tv_descicao_acai">Descricao</string>
    <string name="tv_sifrao">R$</string>
    <string name="tv_preco_acai">00,00</string>
    <string name="tv_tamanho_cachorro">Tamanho</string>
    <string name="tv_porcao_batata">Porção</string>
    <string name="tv_porcao_cachorro">Porção</string>
    <string name="tv_tamanho_batata">Tamanho</string>
    <string name="tv_preco_batata">0,00</string>
    <string name="tv_info_batata">Conteúdo</string>
    <string name="tv_conteudo_batata">Descrição do conteúdo</string>
    <string name="tv_info_cachorro">Conteúdo</string>
    <string name="tv_conteudo_cachorro">Descrição do conteúdo</string>
    <string name="tv_nome_produto">Cachorro Quente</string>
    <string name="iv_foto_produto">Imagem do produto</string>
    <string name="btPedirCarrinho">Pedir</string>
    <string name="tvTotalCarrinho">Total R$</string>
    <string name="tvValorCarrinho">00,00</string>
    <string name="tvTrocoCarrinho">Troco para R$</string>
    <string name="tvProdutoCarrinho">Produto</string>
    <string name="tvTamanhoCarrinho">Tamanho</string>
    <string name="tvDecricaoCarrinho">Descrição</string>
    <string name="tv_valor_carrinho">00,00</string>
    <string name="comentario_ic_favorite_carrinho">Favoritar ou desfavoritar</string>
    <string name="comentario_ic_delete_carrinho">Excluir item</string>
    <string name="tv_texto_carrinho">Continuar comprando</string>
    <string name="cb_carrinho">Preciso de troco</string>
    <string name="tv_titulo_header">Olá,</string>
    <string name="tv_subtitulo_header">Bem Vindo ao Nosso App!</string>
    <string name="nav_login">Entrar</string>
    <string name="nav_cadastro">Cadastro</string>
    <string name="nav_alterar_endereco">Alterar Endereço</string>
    <string name="sql_cliente_cadastrado_sucesso">Cadastro realizado com sucesso!</string>
</resources>
