<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_recipiente_item_acai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:text="@string/tv_recipiente_acai"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tamanho_item_acai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:text="@string/tv_tamanho_item_acai"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_recipiente_item_acai"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_divisor_acai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/tv_divisor_acai"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_tamanho_item_acai"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_quantidade_item_acai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:text="@string/tv_quantidade_acai"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_divisor_acai"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_descicao_item_acai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_descicao_acai"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sifrao" />

            <TextView
                android:id="@+id/tv_sifrao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:text="@string/tv_sifrao"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_preco_item_acai"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preco_item_acai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:text="@string/tv_preco_acai"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>